--- a/styles/custom.css
+++ b/styles/custom.css
@@ -18,8 +18,9 @@ Navbar
 }
 
 .navbar-header .navbar-brand {
-	font-size: 2em;
+	font-size: 2.1em;
 	font-weight: bold;
+	padding-top: 0.3em;
 }
 
 .navbar .nav li a {
@@ -50,11 +51,17 @@ Navbar
 }
 
 .nav .dropdown .dropdown-toggle {
-	border-radius: 15px;
+	border-radius: 15px 15px 0 0;
 }
 
-.nav .dropdown .dropdown-toggle:focus {
-	background: red;
+.navbar-brand p {
+	margin-top: 0.2em;
+	font-weight: normal;
+	font-size: 0.5em;
+}
+
+.nav .dropdown .dropdown-menu {
+	border-top-left-radius: 5px;
 }
 
 
@@ -65,7 +72,25 @@ Carousel
 */
 
 #myCarousel img {
-	width: 100%
+	width: 100%;
+	max-height: 500px;
+}
+
+.btn-precios {
+	margin-bottom: .7em;
+	font-size: 1.5em;
+	border-radius: 5px;
+}
+
+.btn-precios a:link,
+.btn-precios a:visited,
+.btn-precios a:hover {
+	text-decoration: none;
+}
+
+.carousel-caption p {
+	font-size: 1.2em;
+	font-weight: bold;
 }
 
 
