--- a/styles/custom.css
+++ b/styles/custom.css
@@ -5,7 +5,7 @@ Navbar
 */
 .main-navbar {
 	background: #769A38;
-	padding: 20px 0;
+	padding: 1.1em 0;
 	margin-bottom: 0;
 	border: 1px solid #769A38;
 	border-radius: 0;
