Algunos comentarios del codigo

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -249,8 +249,9 @@ Contacto
 
 
 
-
-/*Para que aparezca la linea arriba
+/*
+=============================
+Para que aparezca la linea arriba
  del titulo */
 .line-top-left {
 	margin: 0;
