Agegadas dos imagenes para probar con el carousel Agregado un max-width en el carousel para que no se estire tanto en pantallas grandes. hay que probar mas esto para que quede siempre con el ratio bien

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -58,6 +58,10 @@ Main
 	background-color: #769A38;
 }
 
+.container-full {
+	padding: 0;
+}
+
 
 /*
 ===========================
@@ -148,9 +152,16 @@ Carousel
 ===========================
 */
 
-#myCarousel img {
+#myCarousel {
+	margin: auto;
+	max-width: 1280px;
 	width: 100%;
+}
+
+#myCarousel img {
 	max-height: 500px;
+	width: 100%;
+	margin: auto;
 }
 
 .btn-precios {
