--- a/styles/custom.css
+++ b/styles/custom.css
@@ -48,6 +48,11 @@ Para que la navbar colapse tambien en sm
 Main
 ===========================
 */
+* {
+  -webkit-box-sizing: border-box;
+  	 -moz-box-sizing: border-box;
+  		  box-sizing: border-box;
+}
 
 .container,
 .container-fluid {
@@ -152,16 +157,39 @@ Carousel
 ===========================
 */
 
-#myCarousel {
-	margin: auto;
-	max-width: 1280px;
+body {
+	margin: 0 0 20px 0;
+	display: block;
+	height: 100%;
+}
+.site-footer {
+	position: absolute;
+	bottom: 0;
 	width: 100%;
+	height: 60px;
+	background-color: red;
+}
+.footer-container {
+	background-color: #769A38;
+}
+
+#myCarousel {
+	margin: 0;
+	/*max-width: 1280px;*/
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 #myCarousel img {
-	max-height: 500px;
-	width: 100%;
-	margin: auto;
+	/*max-height: 500px;*/
+	/*width: 100%;*/
+	margin: 0;
+}
+
+.carousel-indicators,
+.carousel-caption {
+	margin-bottom: 3.5em;
 }
 
 .btn-precios {
