--- a/styles/custom.css
+++ b/styles/custom.css
@@ -163,12 +163,19 @@ body {
 	height: 100%;
 }
 .site-footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 60px;
 	background-color: red;
 }
+
+@media (max-height: 600px) {
+	.site-footer {
+		position: relative;
+	}
+}
+
 .footer-container {
 	background-color: #769A38;
 }
