--- a/styles/custom.css
+++ b/styles/custom.css
@@ -74,7 +74,7 @@ Navbar
 ===========================
 */
 .main-navbar {
-	background: #769A38;
+	background: #0000FF;
 	padding: 1.1em 0;
 	margin-bottom: 0;
 	border: 1px solid #769A38;
