--- a/styles/custom.css
+++ b/styles/custom.css
@@ -56,7 +56,7 @@ Main
 
 .container,
 .container-fluid {
-	background-color: #eee;
+	background-color: #0000FF;
 }
 
 .container-green {
@@ -77,7 +77,7 @@ Navbar
 	background: #0000FF;
 	padding: 1.1em 0;
 	margin-bottom: 0;
-	border: 1px solid #769A38;
+	border: 1px solid #0000FF;
 	border-radius: 0;
 }
 
